--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,10 @@
 alabaster==0.7.12
 Babel==2.9.0
+beautifulsoup4==4.9.3
 certifi==2020.12.5
 chardet==4.0.0
 docutils==0.16
+furo==2020.12.9b21
 idna==2.10
 imagesize==1.2.0
 Jinja2==2.11.2
@@ -15,6 +17,7 @@ pytz==2020.5
 requests==2.25.1
 six==1.15.0
 snowballstemmer==2.0.0
+soupsieve==2.1
 Sphinx==3.4.1
 sphinx-autobuild==2020.9.1
 sphinxcontrib-applehelp==1.0.2
